--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+echo "# governorhouse" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git branch -M main
+git remote add origin https://github.com/sumbulNaz8/governorhouse.git
+git push -u origin main
